# Python-Model-Validation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: fsa_high_res_validation.yml  option_d_validation.yml  swat_validation.yml
Stability_Analysis/: corner_case_sweep.py  lyapunov_stability_analysis.md
Stability_Analysis/results/: corner_summary.json
docs/option_c_results/: README.md
docs/swat/option_c_results/: README.md
how_to_add_a_new_validation_model/: 01_overview.md  02_validation_contract.md  03_step_by_step_guide.md  04_worked_example_SWAT.md  README.md
identifiability/: compute_fim.py  fisher_information_analysis.md
identifiability/fsa_high_res/: compute_fim.py  fisher_information_analysis.md
identifiability/fsa_high_res/results/: fim_summary.json  per_parameter_table.csv
identifiability/results/: fim_summary.json
identifiability/swat/: fisher_information_analysis.md
identifiability/swat/results/: per_parameter_table.csv
scripts/: clinician_scenario_plots.py  option_c_heatmap.py
scripts/swat/: clinician_scenario_plots.py  option_c_lambda_sweep.py
snapshots/: README.md  manifest.json
src/model_validation/: __init__.py  clinician_plots.py  runner.py  snapshot.py
src/model_validation/models/fsa_high_res/: README_vendored.md  __init__.py  vendored_dynamics.py  (+1 more)
stability/fsa_high_res/: corner_case_sweep.py  lyapunov_stability_analysis.md
stability/fsa_high_res/results/: corner_summary.json
stability/swat/: lyapunov_stability_analysis.md
tests/fsa_high_res/: conftest.py  test_amplitude_bifurcation.py  test_dose_response.py  test_healthy_equilibrium.py  test_no_backwards_optimum.py  test_overtraining_cliff.py  test_phi_anabolic_on_strain.py  test_t_b_anabolic_on_fitness.py
tests/swat/: conftest.py  test_bifurcation.py  test_canonical_scenarios.py  test_circadian_pacemaker_smoothness.py  test_dose_response_ordering.py  test_drift_parity_swat.py  test_entrainment_corner_cases.py  test_entrainment_no_twilight_dip.py  test_entrainment_reference_values.py  test_healthy_equilibrium.py  test_latents_bounded_01.py  test_no_backwards_optimum.py  test_sleep_fraction.py  test_sleep_persistence.py  test_v_c_phase.py  test_v_h_anabolicity.py  test_v_n_catabolicity.py
(+4 files in other folders)
