[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-validation"
version = "0.1.0"
description = "Mathematical and clinical-validity gating tests for physiological models before vendoring into downstream control libraries."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ajay Talati" },
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "diffrax>=0.6",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "expected_to_fail_pre_fix: Test fails on a pre-fix model snapshot (regression target). Used by SWAT for issue #4; reusable by other models when they vendor a known-broken upstream commit as a regression baseline.",
]
